:bug: Fixed broken UI

--- a/index.css
+++ b/index.css
@@ -96,13 +96,22 @@ body {
 .header {
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
 	padding: 8px 16px;
 	font-weight: 600;
 }
 
 .header span {
 	padding: 0 8px;
+}
+
+.tools {
+	display: flex;
+	width: 100%;
+	overflow-x: auto;
+	white-space: nowrap;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .file,
